<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/nav_manager_dashboard"
            android:checked="true"
            android:enabled="true"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/nav_manager_foods"
            android:actionLayout="@layout/fragment_food_list"
            android:icon="@drawable/ic_fastfood"
            android:title="@string/foods" />
        <item
            android:id="@+id/nav_manager_users"
            android:icon="@drawable/ic_users"
            android:title="@string/users" />
        <item
            android:id="@+id/nav_manager_orders"
            android:icon="@drawable/ic_orders"
            android:title="@string/orders" />
        <item
            android:id="@+id/nav_manager_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>
</menu>